--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 62,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "516ef21c-e826-4c60-ab02-400774ea5d62",
+        "outputId": "2197fb3f-85f1-45be-a307-ef8df77350f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 63,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 64,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 65,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "tDBqCWkfjVjY",
-        "outputId": "245bff58-6daf-44f1-d6e9-ee0cbe1bd19e",
+        "outputId": "0c013f4b-79a1-4dc6-da9e-253bb585f966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -382,12 +382,10 @@
         "from sklearn.preprocessing import PolynomialFeatures\n",
         "poly_reg = PolynomialFeatures(degree = 2)\n",
         "x_poly = poly_reg.fit_transform(x_train)\n",
-        "\n",
-        "from sklearn.linear_model import LinearRegression\n",
-        "lineal_poly = LinearRegression()\n",
-        "lineal_poly.fit(x_poly,y_train)"
+        "lin_reg=LinearRegression()\n",
+        "lin_reg.fit(x_poly,y_train)"
       ],
-      "execution_count": 66,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +397,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 75
         }
       ]
     },
@@ -422,16 +420,16 @@
         "id": "dwwzroSL4J3G"
       },
       "source": [
-        "y_predic_poly=lineal_poly.predict(x_poly)"
+        "y_predic_poly=lin_reg.predict(x_poly)"
       ],
-      "execution_count": 67,
+      "execution_count": 76,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "m3dR-l-3lXLq",
-        "outputId": "d266eefd-af97-469e-9d51-8e7ab3d1b9e4",
+        "outputId": "9d826e7b-a196-46c4-c39d-aad7a2e81aa2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -444,7 +442,7 @@
         "y_train = y_train[:,np.newaxis]\n",
         "print(str(y_train.shape))"
       ],
-      "execution_count": 68,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +458,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "pUe02GH8nJty",
-        "outputId": "09d9edf0-02fe-4754-8d2f-062a5f9ed462",
+        "outputId": "fb8b109b-02da-4b32-86c6-495f96150da1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
@@ -468,9 +466,9 @@
       },
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "print(accuracy_score(y_train, y_predic_poly))"
+        "print(accuracy_score(y_train,y_predic_poly))"
       ],
-      "execution_count": 70,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "error",
@@ -479,7 +477,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-70-b81c3bc62cbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_predic_poly\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-86-8dd635bc2e9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_predic_poly\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    183\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m     \u001b[0;31m# Compute accuracy for each possible representation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    186\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'multilabel'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         raise ValueError(\"Classification metrics can't handle a mix of {0} \"\n\u001b[0;32m---> 90\u001b[0;31m                          \"and {1} targets\".format(type_true, type_pred))\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0;31m# We can't have more than one value on y_type => The set is no more needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m: Classification metrics can't handle a mix of multiclass and continuous targets"
@@ -490,60 +488,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DJ8z1ySspeqi",
-        "outputId": "28a432f1-970d-4847-f5fe-8f4d49b715f4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "id": "U_6domg4pj1Y"
       },
       "source": [
-        "y_predic_poly = y_predic_poly[:,np.newaxis]\n",
-        "print(str(y_predic_poly.shape))\n",
-        "\n",
-        "y_train = y_train[:,np.newaxis]\n",
-        "print(str(y_train.shape))"
+        "y_predic_poly"
       ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(68, 1, 1)\n",
-            "(68, 1)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "U_6domg4pj1Y",
-        "outputId": "faff1f46-38ed-4771-fbff-b9d280827b24",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "type(y_predic_poly)"
-      ],
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "numpy.ndarray"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 44
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -551,7 +502,7 @@
         "id": "oJpBRQ0YULM8"
       },
       "source": [
-        "y_predic_poly= lineal_poly.predict([[1,202009,5,(202009*5)),(5*2)]])"
+        "y_train"
       ],
       "execution_count": null,
       "outputs": []
