--- a/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "1099a1f2-4e55-4afb-bffc-cff385193ae8",
+        "outputId": "fbd82c9a-08b5-423e-90e5-9ab56043a06b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,12 +76,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -98,8 +98,106 @@
         "Y  = data.iloc[:,2].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9uNGk3W0Oj0I"
+      },
+      "source": [
+        "i_año = [] # identificador de año\n",
+        "x_año = [] # año\n",
+        "x_mes = [] # mes\n",
+        "\n",
+        "for ciclo in X[:,0]:\n",
+        "    x_mes.append(int(str(ciclo)[4:6]))\n",
+        "    if str(ciclo)[0:4] == \"2019\":\n",
+        "        x_año.append(2019)        \n",
+        "        i_año.append(0) \n",
+        "    if str(ciclo)[0:4] == \"2020\":\n",
+        "        x_año.append(2020)        \n",
+        "        i_año.append(1)\n",
+        "      \n",
+        "i_año = np.array(i_año)[:,np.newaxis]\n",
+        "x_año = np.array(x_año)[:,np.newaxis]\n",
+        "x_mes = np.array(x_mes)[:,np.newaxis]"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OsUZIAN9QLfm"
+      },
+      "source": [
+        "# Años de antiguedad \n",
+        "# 0 -> Negro\n",
+        "# 1 -> Rojo\n",
+        "# 2 -> Naranja\n",
+        "# 3 -> Amarillo \n",
+        "# 4 -> Azul\n",
+        "# 5 -> Violeta \n",
+        "# 6 -> Verde   años de antiguedad desde 6 años en adelante\n",
+        "\n",
+        "i_año_ant = []\n",
+        "for ciclo in X[:,1]:\n",
+        "    if int(ciclo) == 0:\n",
+        "        i_año_ant.append(0)\n",
+        "    if int(ciclo) == 1:\n",
+        "        i_año_ant.append(1)\n",
+        "    if int(ciclo) == 2:\n",
+        "        i_año_ant.append(2)\n",
+        "    if int(ciclo) == 3:\n",
+        "        i_año_ant.append(3)\n",
+        "    if int(ciclo) == 4:\n",
+        "        i_año_ant.append(4)\n",
+        "    if int(ciclo) == 5:\n",
+        "        i_año_ant.append(5)\n",
+        "    if int(ciclo) >  5:\n",
+        "        i_año_ant.append(6) \n",
+        "#i_año_ant = np.array(i_año_ant)[:,np.newaxis]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8lxu-prTSfkZ",
+        "outputId": "f1359781-bd7a-4348-c8b9-0d02f9f1cc95",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        }
+      },
+      "source": [
+        "X[:,1]"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([20,  5,  0,  3,  5,  2,  5,  5,  1,  2,  1,  5,  2,  3,  4,  4,  4,\n",
+              "        4,  5,  3,  0,  5,  0,  1,  1,  1,  2,  4,  4,  4,  0,  3,  0,  3,\n",
+              "        5,  2,  2,  1,  3,  5, 14,  3,  0,  4,  3, 10,  1,  0,  3,  5,  0,\n",
+              "        1, 15,  4,  0,  9,  4,  0,  1,  4,  1,  5,  1,  2,  1,  3,  4,  0,\n",
+              "        2, 19,  5,  4,  0,  2,  4,  4, 13,  2,  1,  2,  2,  1,  4,  2,  5,\n",
+              "        3,  4,  3,  6,  1,  4,  0,  5,  3,  2,  3,  0,  5,  2,  1,  3,  3,\n",
+              "        0,  2,  1,  2,  6,  1,  2,  0,  3,  1,  0,  2,  3,  5,  3,  0,  5,\n",
+              "        6,  4,  0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -112,50 +210,9 @@
         }
       },
       "source": [
-        "i_año = [] # identificador de año\n",
-        "x_año = [] # año\n",
-        "x_mes = [] # mes\n",
-        "\n",
-        "for _ in X[:,0]:\n",
-        "    if str(_)[0:4] == \"2019\":\n",
-        "        x_año.append(2019)\n",
-        "        x_mes.append(int(str(_)[4:7]))\n",
-        "        i_año.append(0) \n",
-        "    if str(_)[0:4] == \"2020\":\n",
-        "        x_año.append(2020)\n",
-        "        x_mes.append(int(str(_)[4:7]))\n",
-        "        i_año.append(1)\n",
-        "i_año = np.array(i_año)[:,np.newaxis]\n",
-        "x_año = np.array(x_año)[:,np.newaxis]\n",
-        "x_mes = np.array(x_mes)[:,np.newaxis]\n",
         "\n",
         "\n",
-        "# Periodo - Años de antiguedad - Bajas\n",
-        "# 0 -> Negro\n",
-        "# 1 -> Rojo\n",
-        "# 2 -> Naranja\n",
-        "# 3 -> Amarillo \n",
-        "# 4 -> Azul\n",
-        "# 5 -> Violeta \n",
-        "# 6 -> Verde\n",
         "\n",
-        "i_año_ant = []\n",
-        "for _ in X[:,1]:\n",
-        "    if int(_) == 0:\n",
-        "        i_año_ant.append(0)\n",
-        "    if int(_) == 1:\n",
-        "        i_año_ant.append(1)\n",
-        "    if int(_) == 2:\n",
-        "        i_año_ant.append(2)\n",
-        "    if int(_) == 3:\n",
-        "        i_año_ant.append(3)\n",
-        "    if int(_) == 4:\n",
-        "        i_año_ant.append(4)\n",
-        "    if int(_) == 5:\n",
-        "        i_año_ant.append(5)\n",
-        "    if int(_) >  5:\n",
-        "        i_año_ant.append(6) \n",
-        "i_año_ant = np.array(i_año_ant)[:,np.newaxis]\n",
         "\n",
         "c0,c1,c2,c3 ,c4 ,c5 ,c6  = [],[],[],[],[],[],[]\n",
         "c7,c8,c9,c10,c11,c12,c13 = [],[],[],[],[],[],[]\n",
@@ -367,7 +424,7 @@
         "plt.title('Bajas por antiguedad -mas de 5 años-')\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -495,7 +552,7 @@
         "from sklearn.preprocessing import PolynomialFeatures \n",
         "from sklearn.metrics import accuracy_score"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +821,7 @@
         "plt.scatter(v_pr, y_pr2, c='violet', marker='o', alpha=1)\n",
         "plt.show()\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
