--- a/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
@@ -98,7 +98,7 @@
         "Y  = data.iloc[:,2].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 3,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "x_año = np.array(x_año)[:,np.newaxis]\n",
         "x_mes = np.array(x_mes)[:,np.newaxis]"
       ],
-      "execution_count": 24,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -142,62 +142,37 @@
         "# 5 -> Violeta \n",
         "# 6 -> Verde   años de antiguedad desde 6 años en adelante\n",
         "\n",
-        "i_año_ant = []\n",
+        "i_antiguedad = []\n",
         "for ciclo in X[:,1]:\n",
         "    if int(ciclo) == 0:\n",
-        "        i_año_ant.append(0)\n",
+        "        i_antiguedad.append(0)\n",
         "    if int(ciclo) == 1:\n",
-        "        i_año_ant.append(1)\n",
+        "        i_antiguedad.append(1)\n",
         "    if int(ciclo) == 2:\n",
-        "        i_año_ant.append(2)\n",
+        "        i_antiguedad.append(2)\n",
         "    if int(ciclo) == 3:\n",
-        "        i_año_ant.append(3)\n",
+        "        i_antiguedad.append(3)\n",
         "    if int(ciclo) == 4:\n",
-        "        i_año_ant.append(4)\n",
+        "        i_antiguedad.append(4)\n",
         "    if int(ciclo) == 5:\n",
-        "        i_año_ant.append(5)\n",
+        "        i_antiguedad.append(5)\n",
         "    if int(ciclo) >  5:\n",
-        "        i_año_ant.append(6) \n",
-        "#i_año_ant = np.array(i_año_ant)[:,np.newaxis]"
+        "        i_antiguedad.append(6) \n",
+        "i_antiguedad = np.array(i_antiguedad)[:,np.newaxis]"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8lxu-prTSfkZ",
-        "outputId": "f1359781-bd7a-4348-c8b9-0d02f9f1cc95",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 153
-        }
+        "id": "gJH0X0VOb41h"
       },
       "source": [
-        "X[:,1]"
+        ""
       ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([20,  5,  0,  3,  5,  2,  5,  5,  1,  2,  1,  5,  2,  3,  4,  4,  4,\n",
-              "        4,  5,  3,  0,  5,  0,  1,  1,  1,  2,  4,  4,  4,  0,  3,  0,  3,\n",
-              "        5,  2,  2,  1,  3,  5, 14,  3,  0,  4,  3, 10,  1,  0,  3,  5,  0,\n",
-              "        1, 15,  4,  0,  9,  4,  0,  1,  4,  1,  5,  1,  2,  1,  3,  4,  0,\n",
-              "        2, 19,  5,  4,  0,  2,  4,  4, 13,  2,  1,  2,  2,  1,  4,  2,  5,\n",
-              "        3,  4,  3,  6,  1,  4,  0,  5,  3,  2,  3,  0,  5,  2,  1,  3,  3,\n",
-              "        0,  2,  1,  2,  6,  1,  2,  0,  3,  1,  0,  2,  3,  5,  3,  0,  5,\n",
-              "        6,  4,  0])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -218,60 +193,60 @@
         "c7,c8,c9,c10,c11,c12,c13 = [],[],[],[],[],[],[]\n",
         "for _ in list(range(len(X[:,1]))):\n",
         "    # 2019 ------------------------------------------------\n",
-        "    if i_año_ant[_,0] == 0 and i_año[_,0] == 0 :\n",
+        "    if i_antiguedad[_,0] == 0 and i_año[_,0] == 0 :\n",
         "        c0.append(1)\n",
         "    else:\n",
         "        c0.append(0)\n",
-        "    if i_año_ant[_,0] == 1 and i_año[_,0] == 0 : # 2019 - 1 año de antiguedad\n",
+        "    if i_antiguedad[_,0] == 1 and i_año[_,0] == 0 : # 2019 - 1 año de antiguedad\n",
         "        c1.append(1)\n",
         "    else:\n",
         "        c1.append(0)\n",
-        "    if i_año_ant[_,0] == 2 and i_año[_,0] == 0 :\n",
+        "    if i_antiguedad[_,0] == 2 and i_año[_,0] == 0 :\n",
         "        c2.append(1)\n",
         "    else:\n",
         "        c2.append(0)\n",
-        "    if i_año_ant[_,0] == 3 and i_año[_,0] == 0 :\n",
+        "    if i_antiguedad[_,0] == 3 and i_año[_,0] == 0 :\n",
         "        c3.append(1)\n",
         "    else:\n",
         "        c3.append(0)\n",
-        "    if i_año_ant[_,0] == 4 and i_año[_,0] == 0 :\n",
+        "    if i_antiguedad[_,0] == 4 and i_año[_,0] == 0 :\n",
         "        c4.append(1)\n",
         "    else:\n",
         "        c4.append(0)\n",
-        "    if i_año_ant[_,0] == 5 and i_año[_,0] == 0 :\n",
+        "    if i_antiguedad[_,0] == 5 and i_año[_,0] == 0 :\n",
         "        c5.append(1)\n",
         "    else:\n",
         "        c5.append(0)\n",
-        "    if i_año_ant[_,0] >= 6 and i_año[_,0] == 0 :\n",
+        "    if i_antiguedad[_,0] >= 6 and i_año[_,0] == 0 :\n",
         "        c6.append(1)\n",
         "    else:\n",
         "        c6.append(0)\n",
         "    # 2020 ------------------------------------------------\n",
-        "    if i_año_ant[_,0] == 0 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] == 0 and i_año[_,0] == 1 :\n",
         "        c7.append(1)\n",
         "    else:\n",
         "        c7.append(0)\n",
-        "    if i_año_ant[_,0] == 1 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] == 1 and i_año[_,0] == 1 :\n",
         "        c8.append(1)\n",
         "    else:\n",
         "        c8.append(0)\n",
-        "    if i_año_ant[_,0] == 2 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] == 2 and i_año[_,0] == 1 :\n",
         "        c9.append(1)\n",
         "    else:\n",
         "        c9.append(0)\n",
-        "    if i_año_ant[_,0] == 3 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] == 3 and i_año[_,0] == 1 :\n",
         "        c10.append(1)\n",
         "    else:\n",
         "        c10.append(0)\n",
-        "    if i_año_ant[_,0] == 4 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] == 4 and i_año[_,0] == 1 :\n",
         "        c11.append(1)\n",
         "    else:\n",
         "        c11.append(0)\n",
-        "    if i_año_ant[_,0] == 5 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] == 5 and i_año[_,0] == 1 :\n",
         "        c12.append(1)\n",
         "    else:\n",
         "        c12.append(0)\n",
-        "    if i_año_ant[_,0] >= 6 and i_año[_,0] == 1 :\n",
+        "    if i_antiguedad[_,0] >= 6 and i_año[_,0] == 1 :\n",
         "        c13.append(1)\n",
         "    else:\n",
         "        c13.append(0)\n",
