--- a/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "fbd82c9a-08b5-423e-90e5-9ab56043a06b",
+        "outputId": "1589ad02-3212-471c-f5ea-688ed75df1b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,12 +76,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -98,7 +98,7 @@
         "Y  = data.iloc[:,2].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 49,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "x_año = np.array(x_año)[:,np.newaxis]\n",
         "x_mes = np.array(x_mes)[:,np.newaxis]"
       ],
-      "execution_count": 50,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         "        i_antiguedad.append(6) \n",
         "i_antiguedad = np.array(i_antiguedad)[:,np.newaxis]"
       ],
-      "execution_count": 55,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -169,7 +169,39 @@
         "id": "gJH0X0VOb41h"
       },
       "source": [
-        ""
+        "c0,c1,c2,c3 ,c4 ,c5 ,c6  = [],[],[],[],[],[],[]\n",
+        "c7,c8,c9,c10,c11,c12,c13 = [],[],[],[],[],[],[]\n",
+        "\n",
+        "for num in  range (2019, 2020):    \n",
+        "    for ciclo in list(range(len(X[:,1]))):\n",
+        "        if i_antiguedad[ciclo,0] == 0 and x_año[ciclo,0] == num :\n",
+        "          c0.append(1)\n",
+        "        else:\n",
+        "          c0.append(0)\n",
+        "        if i_antiguedad[ciclo,0] == 1 and x_año[ciclo,0] == num :\n",
+        "          c1.append(1)\n",
+        "        else:\n",
+        "          c1.append(0)\n",
+        "        if i_antiguedad[ciclo,0] == 2 and x_año[ciclo,0] == num :\n",
+        "          c2.append(1)\n",
+        "        else:\n",
+        "          c2.append(0)\n",
+        "        if i_antiguedad[ciclo,0] == 3 and x_año[ciclo,0] == num :\n",
+        "          c3.append(1)\n",
+        "        else:\n",
+        "          c3.append(0)\n",
+        "        if i_antiguedad[ciclo,0] == 4 and x_año[ciclo,0] == num :\n",
+        "          c4.append(1)\n",
+        "        else:\n",
+        "          c4.append(0)\n",
+        "        if i_antiguedad[ciclo,0] == 5 and x_año[ciclo,0] == num :\n",
+        "          c5.append(1)\n",
+        "        else:\n",
+        "          c5.append(0)\n",
+        "        if i_antiguedad[ciclo,0] >= 6 and x_año[ciclo,0] == num :\n",
+        "          c6.append(1)\n",
+        "        else:\n",
+        "          c6.append(0)\n"
       ],
       "execution_count": null,
       "outputs": []
